2008-06-18 Jim Garlick <garlick@llnl.gov>

	* test/icebox.c, t29 thru t34 : Tests for icebox support.

	* etc/icebox3.dev : Make it work for v3 and v4.

	* etc/icebox4.dev : Removed.

	* etc/mcr.conf : Test harness version of mcr powerman.conf.

	* examples/* : Removed as the examples were out of date and there
	are now plenty in test/*.conf.

2008-06-18 Albert Chu <chu11@llnl.gov>

	* etc/ipmipower.dev: Fix tabbing.

2008-06-18 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.1

	* powerman.spec: Add fc9 stanza.

2008-06-17 Jim Garlick <garlick@llnl.gov>

	* src/device.c : Fix bug where expired delays could be extended by
	the device timeout.

	* test/baytech.c : Fix bug in plug array declarations.

	* test/tregex.c : Initialize error.c for out of memory case.

	* src/poweramn.c : Make argument handling fully backwards compat
	with powerman-2.0 and earlier.

2008-06-16 Jim Garlick <garlick@llnl.gov>

	* etc/apcpdu3.dev : Fixed problem with intermittent failures
	of query script.

	* etc/apcpdu.dev : Backport change from above.

2008-06-13 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c : Add classic baytech rpc3 support.

	* test/t25, test/t26 : Investigate some funny business with delay
	handling.

	* test/27, test/28 : Check classic baytech functionality.

2008-06-12 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c : New, Baytech emulator.

	* test/t21, test/t22 : Check basic baytech-rpc3-nc functionality.

	* test/t23, test/t24 : Check basic baytech-rpc28-nc functionality.

	* src/regex.c : Refuse to compile regex > 256 bytes for portability.

	* etc/baytech-rpc28-nc.dev : Eliminate delays from initial handshake.

	* test/tregex.c : Test some more assumptions about how regexes work.

2008-06-11 Jim Garlick <garlick@llnl.gov>

	* src/hostlist.[ch], src/list.[ch], src/cbuf.[ch] :
	Update to latest versions from lsd-tools trunk.

	* test/t17.conf, test/t18.conf : Increase timeouts so tests can
	succeed on slower systems.
